--- a/src/project_pages/About_CSS.css
+++ b/src/project_pages/About_CSS.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   width: 500px;
-  height: 400px;
+  height: 100%;
   font-size: 20px;
   word-spacing: 5px;
   line-height: 35px;
