--- a/src/project_pages/User_cart_CSS.css
+++ b/src/project_pages/User_cart_CSS.css
@@ -30,18 +30,22 @@
     display: flex;
     flex-direction: column;
     width: 99%;
+    height: 85%;
 }
 
 .cart-card-img-container {
     width: 100%;
+    height: 100%;
     display: flex;
-    align-items: center;
+    justify-content: center;
     overflow: hidden;
 }
 
 .cart-text-container {
     align-items: center;
     width: 99%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .cart-card-img {
