--- a/src/Components/Navbar_CSS.css
+++ b/src/Components/Navbar_CSS.css
@@ -72,16 +72,16 @@
   color: rgb(255, 255, 255);
   display: inline-flex;
   align-items: center;
-  padding: 6px;
+  padding: 7px;
   margin-left: 5px;
 }
 
 .search-box-input {
   padding: 5px;
   font-size: 15px;
-  margin-bottom: 7px;
   border: 2px solid rgb(72, 0, 255);
   border-radius: 5px;
+  width: 197px;
 }
 
 .navbar-logo {
@@ -110,4 +110,28 @@
   font-size: 17px;
   font-weight: 600;
   cursor: pointer;
+}
+
+/* suggestion list */
+.suggestion-field{
+    width: 197px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px solid rgb(0, 0, 255);
+    background-color: rgb(255, 255, 255);
+}
+
+.suggestion-field:hover{
+  background-color: #4800ff;
+  color: white;
+}
+
+.SearchSuggetion_main_container{
+    position: absolute;
+    top: 40px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-flow: column;
+    cursor: pointer;
 }
